Changes before dual boot